# 8085

./: README.MD  contributors.md  meson.build
include/: memory.hh  microprocessor.hh  opcode.hh  parser.hh  simulator.hh  typedef.hh
samples/: 1.asm
src/: asm-main.cc  main.cc  memory.cc  microprocessor.cc  parser.cc  simulator.cc
